# defmt-windows

./: Cargo.toml  README.md
defmt-kernel/: Cargo.toml
defmt-kernel/src/: lib.rs
defmt-print/: Cargo.toml
defmt-print/src/: main.rs
example/: Cargo.toml
example/src/: main.rs
pe2table/: Cargo.toml
pe2table/examples/: parse.rs
pe2table/src/: lib.rs  stub.rs  symbol.rs
