[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { version = "0.3.5" }
defmt-kernel = { path = "../defmt-kernel", default-features = false }

[profile.release]
lto = "fat"
